[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/MainScreen/Wall.png" type="Texture" id=1]
[ext_resource path="res://images/MainScreen/dinoBlack.png" type="Texture" id=2]
[ext_resource path="res://images/MainScreen/wizzardBlack.png" type="Texture" id=3]
[ext_resource path="res://images/MainScreen/elfBlack.png" type="Texture" id=4]
[ext_resource path="res://images/players/wizzard_m_idle_anim_f1.png" type="Texture" id=5]
[ext_resource path="res://images/players/elf_f_idle_anim_f2.png" type="Texture" id=6]
[ext_resource path="res://images/players/lizard_m_idle_anim_f1.png" type="Texture" id=7]
[ext_resource path="res://images/MainScreen/VPPixel-Simplified.otf" type="DynamicFontData" id=8]
[ext_resource path="res://go.gd" type="Script" id=9]
[ext_resource path="res://Select.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 62
font_data = ExtResource( 8 )

[node name="Select" type="Node2D"]
position = Vector2( 26.9087, 70.6353 )
script = ExtResource( 10 )

[node name="Wall" type="Sprite" parent="."]
position = Vector2( 487.342, 229.265 )
scale = Vector2( 0.82131, 0.824356 )
texture = ExtResource( 1 )

[node name="dino" type="TextureButton" parent="."]
margin_left = 227.0
margin_top = 66.0
margin_right = 344.0
margin_bottom = 250.0
hint_tooltip = "Dino, o amigo da vizinhan√ßa"
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elf" type="TextureButton" parent="."]
margin_left = 442.0
margin_top = 72.0
margin_right = 559.0
margin_bottom = 256.0
toggle_mode = true
keep_pressed_outside = true
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wizz" type="TextureButton" parent="."]
margin_left = 675.0
margin_top = 71.0
margin_right = 792.0
margin_bottom = 255.0
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go" type="Button" parent="."]
margin_left = 445.675
margin_top = 317.859
margin_right = 531.675
margin_bottom = 414.859
custom_fonts/font = SubResource( 1 )
text = "GO"
flat = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="toggled" from="dino" to="." method="_on_dino_toggled"]
[connection signal="toggled" from="elf" to="." method="_on_elf_toggled"]
[connection signal="toggled" from="wizz" to="." method="_on_wizz_toggled"]
[connection signal="pressed" from="go" to="go" method="_on_go_pressed"]
